lab1/Test/L1-A-12-42.output
Error Type A at Line 3
Error Type B at Line 12
