lab1/Test/L1-A-12-42.cmm
int ;
struct nurLb2z6zNi6L {
  struct &{
  }aNpkvtY0 ;
  struct Xcw9 iGdzyEL3QV3 , RxLYtEvYcs1KbS ;
}PxZbIdFLAHHojr14ciu3 ( ) {
  float L0MXOWXrC1Nk11RAO [ 1414465546 ] = JNSfyTaoHKZTGeERR9Cn 
    ;
  return a2NeVHQ2PQTP99l || Z2Hbx0hlOEA3e && gaKD 
    != BTa2eAK * - ! - AW655lqe9YY [ lXmelLd = nwGM < 
    Dom4vqqqoHM5q8CyRfq + I7DBZEPr / nDhnP5f5uPqi1l_Um 
    ( m7O , - ( rTZsQarQP = = W3brTgyCaRp7 = VDb && kQ 
    <= GKb - KN69sOdKxyPzAE5AoED / - ( rclv = YXytygcHnSkj 
    || JC >= NED6uHdOL0SjA == P2hY ) / - - 685183536 > 
    1253030297.851783051 + Xvht_EPhwUORXe_fJ ) ) ] . n 
    - bWjcqGCnZHUI8wfG ( ) ;
}
int ko4tTUagzeQU_s0U2MH0 , TLEhGvDDtsA0vIArKz 

;
int ;
int ;
int RsPGgIU ( int xB3qRI , int VpNtAygwh3Wq ) {
}
int MvTsRGW ( ) {
  sHjWvxj3PiNUo ;
  if ( ewM )   QfiYbybWuy5EwQR7 ;
else   if ( bWPpZU4DJkr_r5KAs3 )   if ( Cud0RRKP ) 
      unMGs634S9oF ;
else   if ( z51wtlztwzU )   if ( XTN37_9Ri2 )   EoLTFX 
    ;
else   while ( H057coG ) {
    iJNu01wuf9j ;
    S_ ;
  }





}
int ;
